--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-screens": "3.31.1",
     "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-av": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
