--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-font": "^12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -31,9 +32,9 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-sound": "^0.11.2",
+    "react-native-svg": "^15.6.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10",
-    "expo-av": "~14.0.7"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
