--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
@@ -31,6 +31,7 @@
     "react-native": "^0.74.5",
     "react-native-calendars": "^1.1306.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
