--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "expo-font": "^12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-print": "^13.0.1",
     "expo-router": "~3.5.23",
+    "expo-sharing": "^12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -40,11 +42,13 @@
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.6.0",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-view-shot": "^3.8.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-pdf-lib": "^0.2.3",
     "@types/react-native-vector-icons": "^6.4.18",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
