--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
     "react-native-calendars": "^1.1306.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-html-to-pdf": "^0.8.3",
     "@types/react-native-pdf-lib": "^0.2.3",
     "@types/react-native-vector-icons": "^6.4.18",
     "jest": "^29.2.1",
