--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-file-system": "^17.0.1",
     "expo-font": "^12.0.10",
     "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-print": "^13.0.1",
     "expo-router": "~3.5.23",
@@ -43,9 +44,10 @@
     "react-native-screens": "3.31.1",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.6.0",
-    "react-native-vector-icons": "^10.1.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-view-shot": "^3.8.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "@react-native-masked-view/masked-view": "0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
