--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-masked-view/masked-view": "0.3.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
@@ -35,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
     "react-native-calendars": "^1.1306.0",
+    "react-native-date-picker": "^5.0.7",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-modal-datetime-picker": "^18.0.0",
@@ -46,8 +48,7 @@
     "react-native-svg": "^15.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-view-shot": "^3.8.0",
-    "react-native-web": "~0.19.10",
-    "@react-native-masked-view/masked-view": "0.3.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
