working on add task

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,16 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "app/(tabs)",
-    "app/login",
-    "app/forgotPassword",
-    "app/morePage",
-    "app/holidaysList",
-    "app/profileDetails",
+    "app/addTask",
+    "app/applyLeave",
+    "app/applyRegularization",
     "app/bankDetails",
+    "app/forgotPassword",
+    "app/holidaysList",
+    "app/login",
+    "app/morePage",
     "app/paySlips",
+    "app/profileDetails",
+    "app/regularizationsPage",
   ]
 }
