--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-native-masked-view/masked-view": "0.3.1",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.28",
+    "expo": "^51.0.32",
     "expo-av": "~14.0.7",
     "expo-file-system": "^17.0.1",
     "expo-font": "^12.0.10",
