--- a/package.json
+++ b/package.json
@@ -13,56 +13,60 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@10play/tentap-editor": "^0.5.23",
     "@expo/vector-icons": "^14.0.2",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-masked-view/masked-view": "0.3.1",
-    "@react-native-picker/picker": "^2.8.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^6.0.2",
-    "expo": "^51.0.32",
-    "expo-av": "~14.0.7",
-    "expo-file-system": "^17.0.1",
-    "expo-font": "^12.0.10",
-    "expo-image-picker": "~15.0.7",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-print": "~13.0.1",
-    "expo-router": "~3.5.23",
-    "expo-sharing": "^12.0.1",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "react": "^18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "^0.74.5",
+    "expo": "^52.0.7",
+    "expo-av": "~15.0.1",
+    "expo-file-system": "~18.0.3",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.2",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-print": "~14.0.2",
+    "expo-router": "~4.0.6",
+    "expo-sharing": "~13.0.0",
+    "expo-splash-screen": "~0.29.11",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.3",
+    "expo-web-browser": "~14.0.1",
+    "react": "^18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "^0.76.2",
     "react-native-calendars": "^1.1306.0",
     "react-native-date-picker": "^5.0.7",
     "react-native-html-to-pdf": "^0.12.0",
+    "react-native-htmlview": "^0.17.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-pell-rich-editor": "^1.9.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-sound": "^0.11.2",
-    "react-native-svg": "^15.6.0",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-view-shot": "^3.8.0",
-    "react-native-web": "~0.19.10"
+    "react-native-view-shot": "~4.0.0",
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "^13.12.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.3.12",
     "@types/react-native-html-to-pdf": "^0.8.3",
     "@types/react-native-pdf-lib": "^0.2.3",
     "@types/react-native-vector-icons": "^6.4.18",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest": "~29.7.0",
+    "jest-expo": "^52.0.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
