--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-view-shot": "~4.0.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.12.3"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
