--- a/package.json
+++ b/package.json
@@ -19,26 +19,26 @@
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "^52.0.7",
+    "@react-navigation/native": "^7.0.0",
+    "expo": "~52.0.11",
     "expo-av": "~15.0.1",
     "expo-file-system": "~18.0.3",
     "expo-font": "~13.0.1",
-    "expo-image-picker": "~16.0.2",
+    "expo-image-picker": "~16.0.3",
     "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.2",
+    "expo-linking": "~7.0.3",
     "expo-print": "~14.0.2",
-    "expo-router": "~4.0.6",
+    "expo-router": "~4.0.9",
     "expo-sharing": "~13.0.0",
-    "expo-splash-screen": "~0.29.11",
+    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.3",
+    "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "^0.76.2",
+    "react-native": "0.76.3",
     "react-native-calendars": "^1.1306.0",
     "react-native-date-picker": "^5.0.7",
     "react-native-html-to-pdf": "^0.12.0",
@@ -49,11 +49,11 @@
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "^4.0.0",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-view-shot": "~4.0.0",
+    "react-native-view-shot": "4.0.2",
     "react-native-web": "~0.19.13",
     "expo-updates": "~0.26.9"
   },
