--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "expo-env.d.ts",
     "app/(tabs)",
     "app/addTask",
+    "app/editTask",
     "app/applyLeave",
     "app/applyRegularization",
     "app/bankDetails",
